force-app/main/default/objects/Tariff_Trial__c/Tariff_Trial__c.object-meta.xml
<CustomObject>
    <label>Tariff Trial</label>
    <nameField>
        <displayFormat>TT-{0000000}</displayFormat>
        <label>Tariff Trial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tariff Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>