force-app/main/default/objects/Tariff_Trial__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Name of the campaign</description>
    <label>Campaign Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>