force-app/main/default/objects/Tariff_Trial__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>email of the participant</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>