force-app/main/default/objects/Tariff_Trial__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>mobile number of the participant</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>