force-app/main/default/objects/Tariff_Trial__c/fields/NMI__c.field-meta.xml
<CustomField>
    <fullName>NMI__c</fullName>
    <description>NMI of tariff trial</description>
    <label>NMI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>