force-app/main/default/objects/Tariff_Trial__c/fields/Participant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_First_Name__c</fullName>
    <description>first name of the participant</description>
    <label>Participant First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>