force-app/main/default/objects/Tariff_Trial__c/fields/Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_Id__c</fullName>
    <externalId>true</externalId>
    <label>Participant Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>