force-app/main/default/objects/Tariff_Trial__c/fields/Participant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Last_Name__c</fullName>
    <label>Participant Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>