force-app/main/default/objects/Tariff_Trial__c/fields/Retailer_Id__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Id__c</fullName>
    <description>participating retailer id</description>
    <label>Retailer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>