force-app/main/default/objects/Tariff_Trial__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>Start datetime of the event</description>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>